# TestBed

./: .gitignore  CMakeLists.txt
CMakeOpenCV/include/: OpenCVEx.h  OpenCVEx_Export.h
CMakeOpenCV/src/OpenCVEx/: CMakeLists.txt
CMakeOpenCV/src/OpenCVExTest/: OpenCVExTest.cpp
Python/: Keras.py  versions.py
Python/DeepLearningInPython/: Nietzsche.py  Wine.py  WineTest.py  cifar.py  mnist_mlp.py
include/: OpenCVEx.h  Student.h
make/VS2013x64/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  hello.sln  hello.vcxproj  hello.vcxproj.filters
nd4j-test/: pom.xml
nd4j-test/src/main/java/com/dingdang/: Nd4jTest.java
nd4j-test/src/test/java/com/dingdang/: AppTest.java
src/: CMakeLists.txt
src/OpenCVEx/: CMakeLists.txt  OpenCVEx.cpp
src/OpenCVExTest/: CMakeLists.txt
